[metadata]
name = pcapymodules
version = 0.1.0
author = Pratap Chandra Adak
description = Custom Python modules for measurement and analysis in the lab
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pratapadakphys/pcapymodules
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scipy
    matplotlib

[options.package_data]
pcapymodules = ["*.csv", "*.txt"]